# CS-170-Project-2

./: .gitignore  CMakeLists.txt  README.md  backward_elimination_results.txt  forward_selection_results.txt
Headers/: algorithms.hpp
lib/: algorithms.cpp  main.cpp
lib/Data/: test.txt
